protox-parse/src/parse/snapshots/protox_parse__parse__tests__parse_oneof-6.snap
---
source: src/parse/tests.rs
expression: "match parser.parse_oneof() {\n    Ok(value) => Ok(value),\n    Err(()) => Err(parser.lexer.extras.errors),\n}"
---
Ok(
    Oneof {
        name: Ident {
            value: "Foo",
            span: 6..9,
        },
        options: [],
        fields: [
            Field {
                label: None,
                name: Ident {
                    value: "Baz",
                    span: 18..21,
                },
                kind: Group {
                    ty_span: 12..17,
                    body: MessageBody {
                        items: [],
                        extensions: [],
                        options: [],
                        reserved: [],
                    },
                },
                number: Int {
                    negative: true,
                    value: 1,
                    span: 24..26,
                },
                options: None,
                comments: Comments {
                    leading_detached_comments: [],
                    leading_comment: None,
                    trailing_comment: None,
                },
                span: 12..29,
            },
        ],
        comments: Comments {
            leading_detached_comments: [],
            leading_comment: None,
            trailing_comment: None,
        },
        span: 0..31,
    },
)
