protox-parse/src/parse/snapshots/protox_parse__parse__tests__parse_option-12.snap
---
source: protox-parse/src/parse/tests.rs
expression: "if parser.lexer.extras.errors.is_empty() {\n        Ok(result.unwrap())\n    } else { Err(parser.lexer.extras.errors) }"
---
Ok(
    Option {
        body: OptionBody {
            name: [
                Extension(
                    TypeName {
                        leading_dot: None,
                        name: FullIdent {
                            parts: [
                                Ident {
                                    value: "ext",
                                    span: 8..11,
                                },
                            ],
                        },
                    },
                    7..12,
                ),
                Ident(
                    Ident {
                        value: "foo",
                        span: 13..16,
                    },
                ),
            ],
            value: Aggregate(
                "foo : 5",
                19..29,
            ),
        },
        comments: Comments {
            leading_detached_comments: [],
            leading_comment: None,
            trailing_comment: None,
        },
        span: 0..30,
    },
)
