protox-parse/src/parse/snapshots/protox_parse__parse__tests__parse_option-3.snap
---
source: src/parse/tests.rs
expression: "if parser.lexer.extras.errors.is_empty() {\n        Ok(result.unwrap())\n    } else { Err(parser.lexer.extras.errors) }"
---
Ok(
    Option {
        body: OptionBody {
            name: [
                Extension(
                    TypeName {
                        leading_dot: None,
                        name: FullIdent {
                            parts: [
                                Ident {
                                    value: "foo",
                                    span: 8..11,
                                },
                                Ident {
                                    value: "bar",
                                    span: 12..15,
                                },
                            ],
                        },
                    },
                    7..16,
                ),
            ],
            value: String(
                String {
                    value: "hello",
                    span: 19..26,
                },
            ),
        },
        comments: Comments {
            leading_detached_comments: [],
            leading_comment: None,
            trailing_comment: None,
        },
        span: 0..27,
    },
)
