protox-parse/src/parse/snapshots/protox_parse__parse__tests__parse_option.snap
---
source: src/parse/tests.rs
expression: "if parser.lexer.extras.errors.is_empty() {\n        Ok(result.unwrap())\n    } else { Err(parser.lexer.extras.errors) }"
---
Ok(
    Option {
        body: OptionBody {
            name: [
                Ident(
                    Ident {
                        value: "foo",
                        span: 7..10,
                    },
                ),
            ],
            value: Int(
                Int {
                    negative: false,
                    value: 5,
                    span: 13..14,
                },
            ),
        },
        comments: Comments {
            leading_detached_comments: [],
            leading_comment: None,
            trailing_comment: None,
        },
        span: 0..15,
    },
)
