protox-parse/src/parse/snapshots/protox_parse__parse__tests__parse_package-2.snap
---
source: src/parse/tests.rs
expression: "match parser.parse_package() {\n    Ok(value) => Ok(value),\n    Err(()) => Err(parser.lexer.extras.errors),\n}"
---
Ok(
    Package {
        name: FullIdent {
            parts: [
                Ident {
                    value: "foo",
                    span: 45..48,
                },
            ],
        },
        comments: Comments {
            leading_detached_comments: [
                "detached\ndetached2\n",
                "detached3\n",
            ],
            leading_comment: None,
            trailing_comment: Some(
                "trailing",
            ),
        },
        span: 37..49,
    },
)
