protox-parse/src/parse/snapshots/protox_parse__parse__tests__parse_reserved-8.snap
---
source: src/parse/tests.rs
expression: "if parser.lexer.extras.errors.is_empty() {\n        Ok(result.unwrap())\n    } else { Err(parser.lexer.extras.errors) }"
---
Err(
    [
        FloatSuffixOutsideTextFormat {
            span: 10..12,
        },
        UnexpectedToken {
            expected: "an integer",
            found: "1.0",
            span: 10..12,
        },
    ],
)
